infra/k8s/cart-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: rovilay/ecommerce-cart-service:latest
---

apiVersion: v1
kind: Service
metadata:
  name: cart-srvc
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
    - name: cart
      protocol: TCP
      port: 3001
      targetPort: 3001
