infra/k8s/db-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-postgres
  template:
    metadata:
      labels:
        app: db-postgres
    spec:
      containers:
      - name: db-postgres
        image: postgres:15-alpine
        ports:
          - containerPort: 5432
        volumeMounts:
        - name: postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-persistent-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: db-postgres-srvc
spec:
  type: ClusterIP
  selector:
    app: db-postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
