infra/k8s/inventory-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: rovilay/ecommerce-inventory-service:latest
---

apiVersion: v1
kind: Service
metadata:
  name: inventory-srvc
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
    - name: inventory
      protocol: TCP
      port: 3001
      targetPort: 3001
