infra/k8s/my-rabbitmq-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.11-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: my-rabbitmq-srvc
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - name: amqp-port
    protocol: TCP
    port: 5672
    targetPort: 5672        
  - name: management-port
    protocol: TCP
    port: 15672
    targetPort: 15672
