infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: rovilay/ecommerce-order-service:latest
---

apiVersion: v1
kind: Service
metadata:
  name: order-srvc
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 3001
      targetPort: 3001
