infra/k8s/order-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-redis
  template:
    metadata:
      labels:
        app: order-redis
    spec:
      containers:
        - name: order-redis
          image: redis
          ports:
            - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: order-redis-srvc
spec:
  type: ClusterIP
  selector:
    app: order-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
