infra/k8s/product-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: rovilay/ecommerce-product-service:latest
---

apiVersion: v1
kind: Service
metadata:
  name: product-srvc
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 3001
      targetPort: 3001
