infra/k8s/ingress-srvc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: rovi-ecommerce.dev
      http:
        paths:
          - path: /api/v1/products/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-srvc
                port:
                  number: 3001
          - path: /api/v1/categories/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-srvc
                port:
                  number: 3001
          - path: /api/v1/inventory/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: inventory-srvc
                port:
                  number: 3001
          - path: /api/v1/cart/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cart-srvc
                port:
                  number: 3001
